--- a/print_class/print.html
+++ b/print_class/print.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
@@ -12,9 +11,10 @@
             border-radius: 4px;
             color: #fff;
             font-size: 16px;
-            line-height: 30px;
-            text-align: center;
-            background-color: yellowgreen;
+            background-color: blue;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
         }
     </style>
@@ -25,12 +25,13 @@
     <div id="content">打印内容区测试</div>
 </body>
 <script type="module">
-    import {Print}  from './print.js'
-    console.log(Print)
-    document.getElementById('print').onclick = function() {
+    import {Print} from './print.js'
+
+    const printBtn = document.querySelector('#print')
+    printBtn.addEventListener('click', () => {
         new Print({
             dom: '#content'
         })
-    }
+    })
 </script>
 </html>
